force-app/main/default/objects/DvelopConfig__mdt/DvelopConfig__mdt.object-meta.xml
<CustomObject>
    <description
  >Configuration settings for d.velop electronic signature integration</description>
    <label>D.velop Config</label>
    <pluralLabel>D.velop Configs</pluralLabel>
</CustomObject>