force-app/main/default/objects/DvelopConfig__mdt/fields/AdminEmail__c.field-meta.xml
<CustomField>
    <fullName>AdminEmail__c</fullName>
    <description
  >Email of the Nexus admin who co-signs contracts (must be a d.velop IDP user)</description>
    <label>Admin Email (IDP Signer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>