force-app/main/default/objects/DvelopConfig__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description
  >d.velop API key (Bearer token) — keep confidential</description>
    <label>API Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>