force-app/main/default/objects/DvelopConfig__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <description
  >d.velop tenant base URL (e.g. https://talan.d-velop.cloud)</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>